--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,17 @@
 web:
-    image: php:5.6.18-apache
+    build: .
     container_name: hogardexto_web
     ports:
         - "80:80"
     volumes:
         - ../app:/var/www/app
         - ../web:/var/www/web
-        - ../src/config/apache/php.ini:/etc/php5/apache2/php.ini
+        #- ../src/config/apache/php.ini:/etc/php5/apache2/php.ini
         - ../src/config/apache/hogardexto.conf:/etc/apache2/sites-enabled/hogardexto.conf
         - ../logs:/var/log/apache2
     links:
-        - mysql:hogardexto_mysql
-        - memcached:hogardexto_memcached
+        - mysql:mysql
+        - memcached:memcached
     #external_links:
     #    - blabla_mailserver:mailserver.dev.blabla.com.br
     #extra_hosts:
@@ -22,7 +22,11 @@ mysql:
     ports:
         - "3306:3306"
     volumes:
-        - ../datadir:/var/lib/mysql
+        - ../db/working:/var/lib/mysql
+        - ../db/structure:/var/db/structure
+        - ../db/initial-data:/var/db/initial-data
+        - ../src/scripts/mysql:~/scripts
+    #entrypoint: ~/scripts/create.sh
     environment:
         - MYSQL_ROOT_PASSWORD=oiTSj.c5rj
 memcached:
