--- a/src/config/apache/hogardexto.conf
+++ b/src/config/apache/hogardexto.conf
@@ -2,7 +2,7 @@
     ServerName  www.hogardecristo.com.ar
     ServerAlias www.hogardexto.com.ar
     DocumentRoot "/var/www/web"
-    DirectoryIndex index.html
+    DirectoryIndex index.php
 
     ServerSignature Off
 
@@ -10,15 +10,16 @@
     CustomLog "/var/log/apache2/hogardexto-www-access.log" combined
 
     <Directory /var/www/web>
-        Options Indexes FollowSymLinks MultiViews
+        Options FollowSymLinks
         AllowOverride None
         Require all granted 
         <IfModule mod_rewrite.c>
             RewriteEngine On
-            RewriteCond   %{REQUEST_URI} !^(/index\.php|/img|/js|/css|/robots\.txt|/favicon\.ico)
+	    RewriteBase /
+            #RewriteCond   %{REQUEST_URI} !^(/index\.php|/img|/js|/css|/robots\.txt|/favicon\.ico)
             RewriteCond   %{REQUEST_FILENAME} !-f
             RewriteCond   %{REQUEST_FILENAME} !-d
-            RewriteRule   . /index.html [L]
+            RewriteRule ^(.*)$ index.php?/$1 [L]
         </IfModule>
     </Directory>
 
