--- a/src/config/apache/php.ini
+++ b/src/config/apache/php.ini
@@ -865,6 +865,7 @@ default_socket_timeout = 60
 ; If you only provide the name of the extension, PHP will look for it in its
 ; default extension directory.
 ;
+extension=mysqli.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
