add memcached class

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,13 @@ RUN a2enmod rewrite
  
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/bin/composer
 
+
+#Memcached
+RUN apt-get install -y libz-dev libmemcached-dev && \
+    pecl install memcached && \
+    docker-php-ext-enable memcached
+
+#RUN apt-get update && apt-get install -y php5-memcached
+#RUN php5enmod memcached
+
 WORKDIR /var/www
